--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 body {
     font-family: 'Arial', sans-serif;
+    background-color: #333333;
+    color: #cccccc;
+    margin: 10px;
+    padding: 10px;
+}
+
+projects{
+    margin: 100px;
+    padding: 200px;
 }
 
 /* Customize as needed */
